--- a/index.html
+++ b/index.html
@@ -9,8 +9,17 @@
   <body>
     <header class="header">
       <!-- logo -->
+      <img class="logo" src="assets/shopping-bag-solid.png">
       <!-- hamburger button -->
+      <button class="navbutton">
+        <img src="assets/icons/bars-solid.png">
+      </button>
       <!-- navigation -->
+      <nav class="main-nav">
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="contact.html">Contact</a>
+      </nav>
     </header>
     <main class="content">
       <!-- banner -->
