--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
       <img class="logo" src="assets/shopping-bag-solid.png">
       <!-- hamburger button -->
       <button class="navbutton">
-        <img src="assets/icons/bars-solid.png">
+        <!-- <img src="assets/icons/bars-solid.png"> -->
       </button>
       <!-- navigation -->
       <nav class="main-nav">
